src/assets/CloudFormation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sample stack with R53, ALB, NLB, EC2, Security Groups, NAT Gateway",
  "Resources": {

    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "Tags": [{"Key": "Name", "Value": "SampleVPC"}]
      }
    },

    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "MyVPC"},
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "AvailabilityZone": { "Fn::Select": [ "0", { "Fn::GetAZs": "" } ] }
      }
    },

    "PrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "MyVPC"},
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": { "Fn::Select": [ "0", { "Fn::GetAZs": "" } ] }
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {"Ref": "MyVPC"},
        "InternetGatewayId": {"Ref": "InternetGateway"}
      }
    },

    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {"VpcId": {"Ref": "MyVPC"}}
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachGateway",
      "Properties": {
        "RouteTableId": {"Ref": "PublicRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "InternetGateway"}
      }
    },
    "PublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "PublicSubnet"},
        "RouteTableId": {"Ref": "PublicRouteTable"}
      }
    },

    "ElasticIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {"Ref": "PublicSubnet"},
        "AllocationId": {"Fn::GetAtt": ["ElasticIP", "AllocationId"]}
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {"VpcId": {"Ref": "MyVPC"}}
    },
    "PrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {"Ref": "NATGateway"}
      }
    },
    "PrivateSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {"Ref": "PrivateSubnet"},
        "RouteTableId": {"Ref": "PrivateRouteTable"}
      }
    },

    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {"Ref": "MyVPC"},
        "GroupDescription": "Allow SSH and HTTP",
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 22, "ToPort": 22, "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": 80, "ToPort": 80, "CidrIp": "0.0.0.0/0"}
        ]
      }
    },

    "MyEC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-0c94855ba95c71c99",
        "InstanceType": "t2.micro",
        "SubnetId": {"Ref": "PrivateSubnet"},
        "SecurityGroupIds": [{"Ref": "InstanceSecurityGroup"}]
      }
    },

    "MyALB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": "MyALB",
        "Subnets": [{"Ref": "PublicSubnet"}],
        "SecurityGroups": [{"Ref": "InstanceSecurityGroup"}],
        "Scheme": "internet-facing",
        "Type": "application"
      }
    },

    "MyNLB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": "MyNLB",
        "Subnets": [{"Ref": "PublicSubnet"}],
        "Scheme": "internet-facing",
        "Type": "network"
      }
    },

    "MyHostedZone": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "example.com."
      }
    },

    "MyDNSRecord": {
      "Type": "AWS::Route53::RecordSet",
      "Properties": {
        "HostedZoneId": {"Ref": "MyHostedZone"},
        "Name": "www.example.com.",
        "Type": "A",
        "AliasTarget": {
          "HostedZoneId": { "Fn::GetAtt": ["MyALB", "CanonicalHostedZoneID"] },
          "DNSName": { "Fn::GetAtt": ["MyALB", "DNSName"] }
        }
      }
    }
  },
  "Outputs": {
    "ALBDNS": {
      "Description": "ALB DNS Name",
      "Value": {"Fn::GetAtt": ["MyALB", "DNSName"]}
    },
    "NLBDNS": {
      "Description": "NLB DNS Name",
      "Value": {"Fn::GetAtt": ["MyNLB", "DNSName"]}
    }
  }
}
